Bug 43492 - [fortran-dev Regression] ICE in gfc_add_component_ref, at fortran/expr.c:352
Summary: [fortran-dev Regression] ICE in gfc_add_component_ref, at fortran/expr.c:352
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: fortran-dev
: P3 normal
Target Milestone: ---
Assignee: janus
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-23 17:08 UTC by Salvatore Filippone
Modified: 2010-04-21 05:37 UTC (History)
2 users (show)

See Also:
Host: x86_64-unknown-linux-gnu
Target: x86_64-unknown-linux-gnu
Build: x86_64-unknown-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2010-04-20 21:56:13


Attachments
test case (261 bytes, text/plain)
2010-03-23 17:10 UTC, Salvatore Filippone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Salvatore Filippone 2010-03-23 17:08:13 UTC
Hi, 
The attached code produces the subject error. 
[sfilippo@donald bug14]$ gfortran -v
Using built-in specs.
COLLECT_GCC=gfortran
COLLECT_LTO_WRAPPER=/usr/local/gnudev/libexec/gcc/x86_64-unknown-linux-gnu/4.5.0/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: ../fortran-dev/configure --prefix=/usr/local/gnudev --enable-languages=c,c++,fortran : (reconfigured) ../fortran-dev/configure --prefix=/usr/local/gnudev --enable-languages=c,c++,fortran,lto --no-create --no-recursion
Thread model: posix
gcc version 4.5.0 20100320 (experimental) (GCC) 
[sfilippo@donald bug14]$ gfortran  -c psb_base_mat_mod.f03
f951: internal compiler error: in gfc_add_component_ref, at fortran/expr.c:352
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
Comment 1 Salvatore Filippone 2010-03-23 17:10:06 UTC
Created attachment 20172 [details]
test case

If I switch the comments on lines 27-28 the code compiles, i.e. it is the GENERIC interface that is not resolved correctly.
Comment 2 Salvatore Filippone 2010-03-23 18:01:28 UTC
Forgot to highlight that this only applies to fortran-dev branch, with a fresh 4.5 build it compiles cleanly. 
Comment 3 janus 2010-04-19 11:07:19 UTC
Confirmed. Backtrace:

#0  gfc_add_component_ref (e=0x17cb5e0, name=0x7ffff7f2fe70 "base_transp1") at /home/jweil/gcc46/fortran-dev/gcc/fortran/expr.c:703
#1  0x0000000000528306 in resolve_class_typebound_call (code=0x17cb6a0) at /home/jweil/gcc46/fortran-dev/gcc/fortran/resolve.c:5454
#2  0x000000000052dd1e in resolve_code (code=0x17cb6a0, ns=0x17caa30) at /home/jweil/gcc46/fortran-dev/gcc/fortran/resolve.c:8345
#3  0x00000000005378fd in resolve_codes (ns=0x17caa30) at /home/jweil/gcc46/fortran-dev/gcc/fortran/resolve.c:12686
#4  0x00000000005377ee in resolve_codes (ns=0x17c4b50) at /home/jweil/gcc46/fortran-dev/gcc/fortran/resolve.c:12672
#5  0x00000000005379f8 in gfc_resolve (ns=0x17c4b50) at /home/jweil/gcc46/fortran-dev/gcc/fortran/resolve.c:12713
#6  0x0000000000516ec1 in gfc_parse_file () at /home/jweil/gcc46/fortran-dev/gcc/fortran/parse.c:4292
#7  0x00000000005591e3 in gfc_be_parse_file (set_yydebug=0) at /home/jweil/gcc46/fortran-dev/gcc/fortran/f95-lang.c:239
#8  0x0000000000a0d48f in compile_file () at /home/jweil/gcc46/fortran-dev/gcc/toplev.c:1053
#9  0x0000000000a0f779 in do_compile () at /home/jweil/gcc46/fortran-dev/gcc/toplev.c:2423
#10 0x0000000000a0f84f in toplev_main (argc=2, argv=0x7fffffffe308) at /home/jweil/gcc46/fortran-dev/gcc/toplev.c:2465
#11 0x00000000005e0f68 in main (argc=2, argv=0x7fffffffe308) at /home/jweil/gcc46/fortran-dev/gcc/main.c:35
Comment 4 janus 2010-04-20 20:51:04 UTC
Further reduced test case:


module base_mod
  
  type  :: base_mat
  contains 
    procedure :: transp1 => base_transp1
    generic   :: transp => transp1
  end type base_mat

contains

  subroutine base_transp1(a)
    class(base_mat) :: a
  end subroutine base_transp1

  subroutine base_transc1(a)
    class(base_mat) :: a
    call a%transp() 
  end subroutine base_transc1

end module
Comment 5 janus 2010-04-20 21:56:12 UTC
Here is a preliminary patch:

Index: gcc/fortran/resolve.c
===================================================================
--- gcc/fortran/resolve.c	(revision 158513)
+++ gcc/fortran/resolve.c	(working copy)
@@ -5174,7 +5174,7 @@ resolve_typebound_generic_call (gfc_expr* e, const
 	      /* Pass along the name for CLASS methods, where the vtab
 		 procedure pointer component has to be referenced.  */
 	      if (name)
-		*name = target->name;
+		*name = g->specific_st->name;
 	      goto success;
 	    }
 	}

It fixes the test case, but I haven't regtested it yet.
Comment 6 Paul Thomas 2010-04-21 05:35:24 UTC
Subject: Bug 43492

Author: pault
Date: Wed Apr 21 05:35:04 2010
New Revision: 158585

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158585
Log:
2010-04-21  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* resolve.c (resolve_typebound_generic_call): For CLASS methods
	pass back the specific symtree name, rather than the target
	name.

2010-04-21  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* gfortran.dg/generic_22.f03 : New test.


Added:
    branches/fortran-dev/gcc/testsuite/gfortran.dg/generic_22.f03
Modified:
    branches/fortran-dev/gcc/fortran/ChangeLog.fortran-dev
    branches/fortran-dev/gcc/fortran/resolve.c
    branches/fortran-dev/gcc/testsuite/ChangeLog.fortran-dev

Comment 7 Paul Thomas 2010-04-21 05:37:04 UTC
Not only does it regtest but I had a few minutes to commit it in your name, as obvious!  Thanks for the fix, Janus, and thanks for the report, Salvatore.

Paul
Comment 8 Paul Thomas 2010-04-29 19:11:29 UTC
Subject: Bug 43492

Author: pault
Date: Thu Apr 29 19:10:48 2010
New Revision: 158910

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158910
Log:
2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43896
	* symbol.c (add_proc_component,copy_vtab_proc_comps): Remove
	initializers for PPC members of the vtabs.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* symbol.c (add_proc_component,add_proc_comps): Correctly set the 'ppc'
	attribute for all PPC members of the vtypes.
	(copy_vtab_proc_comps): Copy the correct interface.
	* trans.h (gfc_trans_assign_vtab_procs): Modified prototype.
	* trans-expr.c (gfc_trans_assign_vtab_procs): Pass the derived type as
	a dummy argument and make sure all PPC members of the vtab are
	initialized correctly.
	(gfc_conv_derived_to_class,gfc_trans_class_assign): Additional argument
	in call to gfc_trans_assign_vtab_procs.
	* trans-stmt.c (gfc_trans_allocate): Ditto.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43326
	* resolve.c (resolve_typebound_function): Renamed
	resolve_class_compcall.Do all the detection of class references
	here.
	(resolve_typebound_subroutine): resolve_class_typebound_call
	renamed. Otherwise same as resolve_typebound_function.
	(gfc_resolve_expr): Call resolve_typebound_function.
	(resolve_code): Call resolve_typebound_subroutine.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* resolve.c (resolve_typebound_generic_call): For CLASS methods
	pass back the specific symtree name, rather than the target
	name.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/42353
	* resolve.c (resolve_structure_cons): Make the initializer of
	the vtab component 'extends' the same type as the component.

2010-04-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42680
	* interface.c (check_interface1): Pass symbol name rather than NULL to
	gfc_compare_interfaces.(gfc_compare_interfaces): Add assert to
	trap MULL. (gfc_compare_derived_types): Revert previous change
	incorporated incorrectly during merge from trunk, r155778.
	* resolve.c (check_generic_tbp_ambiguity): Pass symbol name rather
	than NULL to gfc_compare_interfaces.
	* symbol.c (add_generic_specifics): Likewise.

2010-02-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42353
	* interface.c (gfc_compare_derived_types): Add condition for vtype.
	* symbol.c (gfc_find_derived_vtab): Sey access to private.
	(gfc_find_derived_vtab): Likewise.
	* module.c (ab_attribute): Add enumerator AB_VTAB.
	(mio_symbol_attribute): Use new attribute, AB_VTAB.
	(check_for_ambiguous): Likewise.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41829
	* trans-expr.c (select_class_proc): Remove function.
	(conv_function_val): Delete reference to previous.
	(gfc_conv_derived_to_class): Add second argument to the call to
	gfc_find_derived_vtab.
	(gfc_conv_structure): Exclude proc_pointer components when
	accessing $data field of class objects.
	(gfc_trans_assign_vtab_procs): New function.
	(gfc_trans_class_assign): Add second argument to the call to
	gfc_find_derived_vtab.
	* symbol.c (gfc_build_class_symbol): Add delayed_vtab arg and
	implement holding off searching for the vptr derived type.
	(add_proc_component): New function.
	(add_proc_comps): New function.
	(add_procs_to_declared_vtab1): New function.
	(copy_vtab_proc_comps): New function.
	(add_procs_to_declared_vtab): New function.
	(void add_generic_specifics): New function.
	(add_generics_to_declared_vtab): New function.
	(gfc_find_derived_vtab): Add second argument to the call to
	gfc_find_derived_vtab. Add the calls to
	add_procs_to_declared_vtab and add_generics_to_declared_vtab.
	* decl.c (build_sym, build_struct): Use new arg in calls to
	gfc_build_class_symbol.
	* gfortran.h : Add vtype bitfield to symbol_attr. Remove the
	definition of struct gfc_class_esym_list. Modify prototypes
	of gfc_build_class_symbol and gfc_find_derived_vtab.
	* trans-stmt.c (gfc_trans_allocate): Add second argument to the
	call to gfc_find_derived_vtab.
	* module.c : Add the vtype attribute.
	* trans.h : Add prototype for gfc_trans_assign_vtab_procs.
	* resolve.c (resolve_typebound_generic_call): Add second arg
	to pass along the generic name for class methods.
	(resolve_typebound_call): The same.
	(resolve_compcall): Use the second arg to carry the generic
	name from the above. Remove the reference to class_esym.
	(check_members, check_class_members, resolve_class_esym,
	hash_value_expr): Remove functions.
	(resolve_class_compcall, resolve_class_typebound_call): Modify
	to use vtable rather than member by member calls.
	(gfc_resolve_expr): Modify second arg in call to
	resolve_compcall.
	(resolve_select_type): Add second arg in call to
	gfc_find_derived_vtab.
	(resolve_code): Add second arg in call resolve_typebound_call.
	(resolve_fl_derived): Exclude vtypes from check for late
	procedure definitions. Likewise for checking of explicit
	interface and checking of pass arg.
	* iresolve.c (gfc_resolve_extends_type_of): Add second arg in
	calls to gfc_find_derived_vtab.
	* match.c (select_type_set_tmp): Use new arg in call to
	gfc_build_class_symbol.
	* trans-decl.c (gfc_get_symbol_decl): Complete vtable if
	necessary.
	* parse.c (endType): Finish incomplete classes.


2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* gfortran.dg/class_16.f03: New test.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274
	* gfortran.dg/class_15.f03: New.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/43326
	* gfortran.dg/dynamic_dispatch_9.f03: New test.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* gfortran.dg/generic_22.f03 : New test.

2010-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/42353
	* gfortran.dg/class_14.f03: New test.

2010-04-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42680
	* gfortran.dg/interface_32.f90: New test.

2009-04-29  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41829
	* gfortran.dg/dynamic_dispatch_5.f03 : Change to "run".
	* gfortran.dg/dynamic_dispatch_7.f03 : New test.
	* gfortran.dg/dynamic_dispatch_8.f03 : New test.


Added:
    trunk/gcc/testsuite/gfortran.dg/class_14.f03
    trunk/gcc/testsuite/gfortran.dg/class_15.f03
    trunk/gcc/testsuite/gfortran.dg/class_16.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_8.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_9.f03
    trunk/gcc/testsuite/gfortran.dg/generic_22.f03
    trunk/gcc/testsuite/gfortran.dg/interface_32.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/decl.c
    trunk/gcc/fortran/gfortran.h
    trunk/gcc/fortran/interface.c
    trunk/gcc/fortran/iresolve.c
    trunk/gcc/fortran/match.c
    trunk/gcc/fortran/module.c
    trunk/gcc/fortran/parse.c
    trunk/gcc/fortran/resolve.c
    trunk/gcc/fortran/symbol.c
    trunk/gcc/fortran/trans-decl.c
    trunk/gcc/fortran/trans-expr.c
    trunk/gcc/fortran/trans-stmt.c
    trunk/gcc/fortran/trans.h
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_5.f03
    trunk/gcc/testsuite/gfortran.dg/dynamic_dispatch_7.f03