2010-04-21  Janus Weil  <janus@gcc.gnu.org>

PR fortran/43492
	* resolve.c (resolve_typebound_generic_call): For CLASS methods
	pass back the specific symtree name, rather than the target
	name.

2010-04-21  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43492
	* gfortran.dg/generic_22.f03 : New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/fortran-dev@158585 138bc75d-0d04-0410-961f-82ee72b054a4